# rs

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
builtins/: Bool.nz  Float.nz  Int.nz  Nat.nz  String.nz  Void.nz
builtins_src/: Nat.nz
crates/ast/: Cargo.toml
crates/check/: Cargo.toml
crates/compile/: Cargo.toml
crates/compiler/: Cargo.toml
crates/host/: Cargo.toml
crates/interpret/: Cargo.toml
crates/interpreter/: Cargo.toml
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/main/src/compiler/: builtins.rs  mod.rs
crates/main/src/compiler/check/: check_class.rs  check_expr.rs  ctx.rs  instantiator.rs
crates/main/src/compiler/main/: compiler.rs
crates/main/src/compiler/parse/: ast.rs  lexer.rs  mod.rs  parse_expr.rs  parse_module.rs  parse_ty.rs  token.rs
crates/main/src/host/: document_info.rs  document_provider.rs
crates/main/src/interpreter/: builtins.rs  emitted_model.rs
crates/main/src/interpreter/run/: mod.rs
crates/main/src/model/: diag.rs  effect.rs  expr.rs  method.rs  ty.rs
crates/main/src/test/: baselines.rs  mod.rs  show_equals.rs  test_document_provider.rs  test_failure.rs
crates/main/src/util/: arena.rs  arith.rs  arr.rs  dict.rs  late.rs  loc.rs  macros.rs  mod.rs  path.rs  ptr.rs  string_maker.rs  sym.rs
crates/model/: Cargo.toml
crates/no-drop-derive/: Cargo.toml
crates/test/: Cargo.toml
crates/test/src/: baselines.rs  lib.rs  show_equals.rs  test_document_provider.rs  test_failure.rs
noze-vscode/: README.md  generate.js  language-configuration.json  package.json  vsc-extension-quickstart.md
src/: diag.rs  main.rs  model.rs
src/compiler/: diag.rs  (+4 more)
(+224 files in other folders)
